# forseti

./: .gitignore  README.md  app.py  main.py  operacao.py  package-lock.json  package.json  pyproject.toml  readme.md  requeriments.txt  requirements.txt
app/: settings.py  urls.py
app/bitcoin/: apps.py  tests.py  urls.py
app/frontend/: package-lock.json
app/frontend/src/: Api.js  App.js
bitcoin/: operacao.py  views.py
bitcoin/templates/: index.html
config/: settings.py  urls.py
gamification/: models.py
public/: index.html
src/: App.css  App.tsx  database.py  index.tsx  levels.py  logic.py  router.py  styles.css
templates/: index.html
