[project]
name = "forseti"
version = "0.1.0"
description = "Add XP to your UX."
authors = [
    {name = "Atilio",email = "thehacktour@gmail.com"}
]
license = {text = "thehecktour"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
